feat: Implement Hibernate integration with PostgreSQL and add domain management classes